fixed endpoint to generated player model, configured phantomJS for build run
